---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed that the example subfactory was improperly cached, leading to several issues all over the UI

---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 11. 12. 2020
  Features:
    - Redesigned the main interface. This means that some things are in different spots than they used to be, and some niche features got lost along the way. I'm sorry about those few that went missing, but I needed to get this done in a reasonable amount of time. If there is anything specific you're dearly missing, please let me know on the mod portal or on Discord.
    - Added a matrix solver. It can be individually enabled for every subfactory and helps to automatically balance out certain advanced recipe setups like oil processing and cracking, with support for voiding byproducts. It can also solve looping recipe chains by asking you for some input from your side. This whole feature is a beta still, so if you run into any problems, please let us know. Huge thanks to scottmsul for taking the charge in implementing this one!
    - Added an optional production column to quickly disable certain recipes by checkbox
    - Added a search bar to the recipe picker
    - You can now alt-click any machine or beacon in your production line to put it into your cursor as a blueprint for easy stamping
    - You can now also alt-click a machine when changing it to implicitly set it to the preferred one for its category
  Changes:
    - The calculation model now considers the base energy drain that most electrical machines have
    - The calculation model now also takes the different launch sequence times for modded rocket silos into account (thanks curiosity!)
    - Setting recipe item amounts directly now behaves more intuitively